--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ numpy = "^1.24.0"
 
 # Machine Learning
 scikit-learn = "^1.3.0"
-imbalanced-learn = "^0.11.0"
 joblib = "^1.3.0"
 xgboost = "^2.0.0"
 lightgbm = "^4.0.0"
@@ -32,6 +31,7 @@ packaging = "^23.0"
 jupyter = "^1.0.0"
 ipykernel = "^6.25.0"
 spicy = "^0.16.0"
+imbalanced-learn = ">=0.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
